<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ItemLine"
    android:padding="4dp">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/P_Barcode"
    android:id="@+id/P_Barcode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P_Name"
        android:id="@+id/P_Name"
        style="@style/Base.TextAppearance.AppCompat.SearchResult.Title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CB_Name"
            android:id="@+id/CB_Name"
            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CM_Name"
            android:id="@+id/CM_Name"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Storage_Text"
            android:id="@+id/textView3"
            android:layout_weight="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/St_Name"
            android:id="@+id/St_Name"
            android:layout_weight="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R_Name"
            android:id="@+id/R_Name"
            android:layout_weight="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pl_Code"
            android:id="@+id/Pl_Code"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Value_Text"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Value"
            android:id="@+id/P_Value"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:allowUndo="true"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Original_Text"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Original"
            android:id="@+id/P_Original"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:allowUndo="true"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Wear_checkBox_Text"
            android:id="@+id/P_Wear_checkBox" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/P_WearDesc"
            android:hint="@string/P_WearDesc_Text" />
    </LinearLayout>

    <ru.magnatit.magnatit.StaticGridView
        android:id="@+id/ImagesGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="spacingWidthUniform"
        android:isScrollContainer="false"
        android:columnWidth="90dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/ItemCancel"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photos"
            android:id="@+id/ItemAddPhoto"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ItemPlace_Text"
            android:id="@+id/ItemPlace"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_directions" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/ItemSave"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

</LinearLayout>