<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/ItemLine"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    android:padding="@dimen/abc_list_item_padding_horizontal_material">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P_Barcode"
        android:id="@+id/P_Barcode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_Name"
            android:id="@+id/P_Name"
            style="@style/Base.TextAppearance.AppCompat.SearchResult.Title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CB_Name"
                android:id="@+id/CB_Name"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CM_Name"
                android:id="@+id/CM_Name"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/P_Value"
        android:id="@+id/P_Value"
        android:gravity="right"
        android:layout_weight="1" />

</LinearLayout>